--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </div>
 </div>
 
-<div class="creator-text">© Created by</div>
+<div class="creator-text">Created by</div>
 <a href="https://www.linkedin.com/in/samxna/" class="watch-link">Samina Ahmed</a>
 
 <script src="script.js"></script>
